--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aiohttp==3.7.4
-pyaudio==0.2.11
+# Use a pre-built wheel for PyAudio to avoid compilation issues
+# If this doesn't work, the user will need to install PyAudio manually
+# For Windows: pip install pipwin && pipwin install pyaudio
 websockets==10.4
 google-cloud-speech==2.17.0
 openai==0.27.0
