Auto-install websockets package and ensure direct API works

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,6 @@ openai==0.27.0
 numpy==1.22.4
 matplotlib==3.5.3
 python-dotenv==1.0.0
-# PyAudio and speech recognition libraries are not required for text-only input
-# If voice input is needed in the future, manually install:
-# google-cloud-speech==2.17.0
-# sounddevice==0.4.5
+# PyAudio is not included by default to avoid installation issues
+# If you need audio playback, install it separately:
 # PyAudio (download appropriate wheel from https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyaudio)
